# muffs

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  fly.toml  muffs-build-prompt.md  nanobot.example.json  pyproject.toml
.claude/: README.md
.claude/commands/: new.md  setup.md
agent/: agent.py
agent/prompts/: muffs_base.txt  routine_generator.txt  setup.txt
agentMuffs/: __init__.py  agent.py  cli.py  muffs_main.py  sdk_context_patch.py  setup_cli.py  workspace.py
agentMuffs/.claude/skills/new/: SKILL.md
agentMuffs/.claude/skills/setup/: SKILL.md
agentMuffs/docs/: muffs-slash-and-memory.md
agentMuffs/memory/: identity.md  memory.md  personality.md  soul.md
agentMuffs/prompts/: automation_creator.txt  muffs_base.txt  routine_generator.txt  setup.txt
dashboard/: CLAUDE.md  README.md  next.config.ts  package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx
dashboard/app/(pages)/: layout.tsx
dashboard/app/(pages)/chat/: layout.tsx  page.tsx
dashboard/components/: app-shell.tsx  app-sidebar.tsx  chat-session-list.tsx  providers.tsx  theme-toggle.tsx
dashboard/components/chat/: chat-empty-state.tsx  session-context-mini.tsx  slash-command-menu.tsx
dashboard/components/overview/: activity-feed.tsx  metrics-cards.tsx
dashboard/contexts/: chat-sessions-context.tsx
dashboard/lib/: config.ts  db.ts  markdown-profile.ts  plain-text.ts  preferences-file.ts  routine-proposal.ts  sendblue.ts  session-label.ts  workspace-paths.ts
db/: schema.sql
nanobot_imessage/: __init__.py  channel.py
scripts/: install.sh
(+26 files in other folders)
