[project]
name = "muffs"
version = "0.1.0"
description = "Muffs — personal AI agent built on Claude Agent SDK"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "composio>=1.0.0rc2",
    "composio-claude-agent-sdk>=0.1.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "apscheduler>=3.10.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
muffs = "agentMuffs.muffs_main:main"
muffs-agent = "agentMuffs.cli:main"
muffs-setup = "agentMuffs.setup_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentMuffs"]
